<resources>
    <string name="app_name">Able</string>
    <string name="app_name_full">AbleMusic</string>
    <string name="about">About</string>
    <string name="add_song">Add Song</string>
    <string name="up_txt">Uploader:</string>
    <string name="t_txt">Title:</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="playlists">Playlists</string>
    <string name="library">Library</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="no_artists">No artists yet.</string>
    <string name="no_albums">No albums yet.</string>
    <string name="song_count">%1$d songs</string>
    <string name="one_song">1 song</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome to %1$s!</string>
    <string name="storage_perm">The storage permission is required to proceed. This is needed for Able to download songs to your storage.</string>
    <string name="spot_adding">Please wait! Importing Playlist</string>
    <string name="spot_title">Import Spotify Playlist</string>
    <string name="pos">Submit</string>
    <string name="playlist_created">Playlist created</string>
    <string name="playlist_addto">Add To Playlist</string>
    <string name="playlist_empty">Playlist name cannot be empty!</string>
    <string name="playlist_fail">Couldn\'t create playlist :(</string>
    <string name="playlist_namei">"Enter the name of your new playlist"</string>
    <string name="playlist_dup">Playlist already contains this song</string>
    <string name="spot_suc">Spotify import successful!</string>
    <string name="spot_invalid">Invalid Playlist URL!</string>
    <string name="spot_fail">Failed :( sorry!</string>
    <string name="spot_importing">Sit back and relax! We\'re importing the songs right now.</string>
    <string name="spot_ytfail">Couldn\'t find any songs on YouTube :( sorry!</string>
    <string name="init_import">Initializing import…</string>
    <string name="unexpected_err">Something went wrong. Please report this to us!</string>
    <string name="pref_fmt">Select the audio format to save songs in.</string>
    <string name="pref_search">Select your preferred search source.</string>
    <string name="pref_about">Check out the people behind Able!</string>
    <string name="fmt">Format</string>
    <string name="src">Source</string>
    <string name="starting">starting…</string>
    <string name="saving">Saving…</string>
    <string name="left">left</string>
    <string name="init_dl">Initialising Download</string>
    <string name="pl_wait">Please wait…</string>
    <string name="music">Music</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="kill">Kill</string>
    <string name="repeat">Repeat</string>
    <string name="imp">Import</string>
    <string name="authors">Authors</string>
    <string name="stream">Stream</string>
    <string name="info">Info</string>
    <string name="ver">Version</string>
    <string name="dunno">CatalyticClaws</string>
    <string name="both">Both</string>
    <string name="dl">Download</string>
    <string name="support">Support</string>
    <string name="welc">Welcome!</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="name_s">Name</string>
    <string name="confirmation">Confirmation</string>
    <string name="song">Song</string>
    <string name="donate">Donate</string>
    <string name="donate_subtext">Hey everyone! It took a lot of hard work to turn this project into reality, and I hope you\'re enjoying it! If you like the project and want it to continue, please consider donating. It motivates me to keep working on it.


You can donate via %1$s
or via the UPI address %2$s</string>
    <string name="enter_song">Enter the song name</string>
    <string name="enter_new_song">Enter the new song name</string>
    <string name="enter_new_art">Enter the new song artist</string>
    <string name="song_ex">e.g. Wake Up Eden</string>
    <string name="song_ex2">e.g Wake Up</string>
    <string name="art_ex">e.g. Eden</string>
    <string name="res_confirm_txt">Are you sure you want to delete %1$s (%2$s) from disk?</string>
    <string name="rem_song">Choose song to remove</string>
    <string name="rem_disk">Delete From Disk</string>
    <string name="rem_playlist">Remove Playlist</string>
    <string name="dl_added">is added to Download Queue</string>
    <string name="about_also">Also, huge thanks to the NewPipe team for the extractor.</string>
    <string name="dev">Udit Karode</string>
    <string name="jayesh">Jayesh Seth</string>
    <string name="hpm">Hyperterminal</string>
    <string name="graphics_d">Sajid Shaik</string>
    <string name="product_man">Safan Sulfikar</string>
    <string name="deseg_dev">Developer</string>
    <string name="deseg_hpm">Head Product Manager</string>
    <string name="deseg_gd">Graphics Designer</string>
    <string name="deseg_pm">Product Manager</string>
    <string name="play_mode">Mode</string>
    <string name="play_mode_sum">Choose your desired way of playing songs.</string>
    <string name="pq">playing queue</string>
    <string name="crp">create playlist</string>
    <string name="opo">Choose the layout that player uses.</string>
    <string name="opo_title">Player Layout</string>
    <string name="no_songs">No downloaded songs yet.</string>
    <string name="no_playlists">No playlists yet.</string>
    <string name="welcome_title">Welcome to Able!</string>
    <string name="welcome_subtitle">Free and open source music player</string>
    <string name="perm_notif_title">Notifications</string>
    <string name="perm_notif_desc">Show playback controls in notification bar</string>
    <string name="perm_audio_title">Music Library</string>
    <string name="perm_audio_desc">Access your device\'s music to play local songs</string>
    <string name="grant">Grant</string>
    <string name="granted">Granted</string>
    <string name="welcome_continue">Continue</string>
    <string name="downloads_title">Downloads</string>
    <string name="downloads_pref_summary">View active and queued downloads</string>
    <string name="downloads_section_title">YouTube Downloads</string>
    <string name="downloads_empty">No active downloads</string>
    <string name="downloads_waiting">Waiting…</string>
    <string name="downloads_spotify_title">Spotify Import</string>
    <string name="downloads_spotify_idle">No import in progress</string>
</resources>
